force-app/main/default/objects/Feedback__c/Feedback__c.object-meta.xml
<CustomObject>
    <description>Feedback tool</description>
    <label>Feedback</label>
    <nameField>
        <displayFormat>FB-{000}</displayFormat>
        <label>Feedback #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>