force-app/main/default/objects/Feedback__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assigned To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alex</fullName>
                <default>true</default>
                <label>Alex</label>
            </value>
            <value>
                <fullName>Julius</fullName>
            </value>
            <value>
                <fullName>Techmatrix</fullName>
            </value>
            <value>
                <fullName>Ivy</fullName>
            </value>
            <value>
                <fullName>Alice Wong</fullName>
            </value>
            <value>
                <fullName>Techmatrix Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>