force-app/main/default/objects/Feedback__c/fields/Aureus_Internal_Approval__c.field-meta.xml
<CustomField>
    <fullName>Aureus_Internal_Approval__c</fullName>
    <label>Aureus Internal Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>