force-app/main/default/objects/Feedback__c/fields/Enrolment_ID__c.field-meta.xml
<CustomField>
    <fullName>Enrolment_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrolment ID</label>
    <referenceTo>Enrolment__c</referenceTo>
    <relationshipLabel>Feedback</relationshipLabel>
    <relationshipName>Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>