force-app/main/default/objects/Feedback__c/fields/Enrolment_ID_Parent_Name__c.field-meta.xml
<CustomField>
    <fullName>Enrolment_ID_Parent_Name__c</fullName>
    <label>Enrolment ID/Parent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>