force-app/main/default/objects/Feedback__c/fields/Estimated_Effort__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Effort__c</fullName>
    <label>Estimated Effort</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>