force-app/main/default/objects/Feedback__c/fields/Fixed_Date__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Date__c</fullName>
    <description>Auto populate once status is marked as &quot;Development complete&quot;</description>
    <label>Fixed Date</label>
    <type>Date</type>
</CustomField>