force-app/main/default/objects/Feedback__c/fields/Last_Lesson_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Lesson_Date__c</fullName>
    <label>Last Lesson Date</label>
    <type>Date</type>
</CustomField>