force-app/main/default/objects/Feedback__c/fields/Lesson_Day__c.field-meta.xml
<CustomField>
    <fullName>Lesson_Day__c</fullName>
    <label>Lesson Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Week_Days</valueSetName>
    </valueSet>
</CustomField>