force-app/main/default/objects/Feedback__c/fields/Lesson_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Lesson_Start_Date__c</fullName>
    <label>Lesson Start Date</label>
    <type>Date</type>
</CustomField>