force-app/main/default/objects/Feedback__c/fields/Lesson_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Lesson_Start_Time__c</fullName>
    <label>Lesson Start Time</label>
    <type>Time</type>
</CustomField>