force-app/main/default/objects/Feedback__c/fields/Make_up_Credit__c.field-meta.xml
<CustomField>
    <fullName>Make_up_Credit__c</fullName>
    <label>Make-up Credit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>