force-app/main/default/objects/Feedback__c/fields/New_Lesson_Time__c.field-meta.xml
<CustomField>
    <fullName>New_Lesson_Time__c</fullName>
    <label>New Lesson Time</label>
    <type>Time</type>
</CustomField>