force-app/main/default/objects/Feedback__c/fields/New_Package__c.field-meta.xml
<CustomField>
    <fullName>New_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Package</label>
    <referenceTo>Package__c</referenceTo>
    <relationshipLabel>Feedback (New Package)</relationshipLabel>
    <relationshipName>Feedback1</relationshipName>
    <type>Lookup</type>
</CustomField>