force-app/main/default/objects/Feedback__c/fields/Old_Package__c.field-meta.xml
<CustomField>
    <fullName>Old_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Package</label>
    <referenceTo>Package__c</referenceTo>
    <relationshipLabel>Feedback</relationshipLabel>
    <relationshipName>Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>