force-app/main/default/objects/Feedback__c/fields/Operational_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Operational_Request_Type__c</fullName>
    <label>Operational Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Template Request</fullName>
                <default>true</default>
                <label>New Template Request</label>
            </value>
            <value>
                <fullName>Credit Note Request</fullName>
            </value>
            <value>
                <fullName>Enrolment Change Request</fullName>
            </value>
            <value>
                <fullName>Enrolment Downgrade Request</fullName>
            </value>
            <value>
                <fullName>Enrolment Upgrade Request</fullName>
            </value>
            <value>
                <fullName>Macro Edit Request</fullName>
            </value>
            <value>
                <fullName>New Macro Request</fullName>
            </value>
            <value>
                <fullName>Refund Customer Request</fullName>
            </value>
            <value>
                <fullName>Teacher Work Hours Request</fullName>
            </value>
            <value>
                <fullName>Template Edit Request</fullName>
            </value>
            <value>
                <fullName>Withdrawal of Lessons Request</fullName>
            </value>
            <value>
                <fullName>Other - Specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>