force-app/main/default/objects/Feedback__c/fields/Parent_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Feedback (Parent Name)</relationshipLabel>
    <relationshipName>Feedback1</relationshipName>
    <type>Lookup</type>
</CustomField>