force-app/main/default/objects/Feedback__c/fields/Request_date__c.field-meta.xml
<CustomField>
    <fullName>Request_date__c</fullName>
    <label>Request Date</label>
    <type>Date</type>
</CustomField>