force-app/main/default/objects/Feedback__c/fields/Request_type__c.field-meta.xml
<CustomField>
    <fullName>Request_type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enrolment Upgrade</fullName>
            </value>
            <value>
                <fullName>Enrolment Downgrade</fullName>
            </value>
            <value>
                <fullName>Enrolment Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>