force-app/main/default/objects/Feedback__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <formula>CreatedBy.FirstName +&quot; &quot; + CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested By</label>
    <type>Text</type>
</CustomField>