force-app/main/default/objects/Feedback__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Dev Fixed</fullName>
            </value>
            <value>
                <fullName>Dev Verified</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
                <label>Prod Fixed</label>
            </value>
            <value>
                <fullName>Verified</fullName>
                <label>Prod Verified</label>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>No-Fix Required</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>