force-app/main/default/objects/Feedback__c/fields/Teacher_Name__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Teacher Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Feedback (Teacher Name)</relationshipLabel>
    <relationshipName>Feedback2</relationshipName>
    <type>Lookup</type>
</CustomField>