force-app/main/default/objects/Feedback__c/fields/TMC_Comments__c.field-meta.xml
<CustomField>
    <fullName>TMC_Comments__c</fullName>
    <label>TMC Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>