force-app/main/default/objects/Feedback__c/fields/TMC_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>TMC_Team_Member__c</fullName>
    <label>TMC Team Member</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AB</fullName>
            </value>
            <value>
                <fullName>PB</fullName>
            </value>
            <value>
                <fullName>RS</fullName>
            </value>
            <value>
                <fullName>RJ</fullName>
            </value>
            <value>
                <fullName>RG</fullName>
            </value>
            <value>
                <fullName>AV</fullName>
            </value>
            <value>
                <fullName>DJ</fullName>
            </value>
            <value>
                <fullName>SM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>