force-app/main/default/objects/Feedback__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operational Request</fullName>
                <default>true</default>
                <label>Operational Request</label>
            </value>
            <value>
                <fullName>Query</fullName>
            </value>
            <value>
                <fullName>Suggestion</fullName>
            </value>
            <value>
                <fullName>Enhancement</fullName>
            </value>
            <value>
                <fullName>New Process Requirement</fullName>
            </value>
            <value>
                <fullName>Defect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>