force-app/main/default/objects/Feedback__c/fields/Type_of_Enrolment__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Enrolment__c</fullName>
    <label>Type of Enrolment(New)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Ad-hoc</fullName>
            </value>
            <value>
                <fullName>Camp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>