force-app/main/default/objects/Feedback__c/validationRules/Approved_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_Restriction</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Aureus_Internal_Approval__c), ISPICKVAL(Aureus_Internal_Approval__c, &apos;Approved&apos;),
NOT(OR(CONTAINS($User.FirstName, &apos;Julius&apos;), CONTAINS($User.FirstName, &apos;Alex&apos;), 
CONTAINS($User.FirstName, &apos;Ying Da&apos;))))</errorConditionFormula>
    <errorMessage>Support request can be approved by only &apos;Julius&apos;, &apos;Alex&apos; and &apos;Ying Da&apos;.</errorMessage>
</ValidationRule>