force-app/main/default/objects/Feedback__c/listViews/Fixed_Issues.listView-meta.xml
<ListView>
    <fullName>Fixed_Issues</fullName>
    <columns>NAME</columns>
    <columns>Priority__c</columns>
    <columns>Type__c</columns>
    <columns>Description__c</columns>
    <columns>Requested_By__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Fixed</value>
    </filters>
    <label>Fixed Issues</label>
</ListView>