force-app/main/default/objects/Feedback__c/listViews/In_Progress_Issues.listView-meta.xml
<ListView>
    <fullName>In_Progress_Issues</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Priority__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Aureus_Internal_Approval__c</columns>
    <columns>Requested_By__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>TMC_Team_Member__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Operational Request,Enhancement,Defect</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Fixed,Verified</value>
    </filters>
    <filters>
        <field>Assigned_To__c</field>
        <operation>equals</operation>
        <value>Techmatrix</value>
    </filters>
    <label>In Progress Issues</label>
</ListView>