force-app/main/default/objects/Feedback__c/listViews/Open_Issue.listView-meta.xml
<ListView>
    <fullName>Open_Issue</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Priority__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Aureus_Internal_Approval__c</columns>
    <columns>Requested_By__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>TMC_Team_Member__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Operational Request</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Open Issues</label>
</ListView>