force-app/main/default/objects/Feedback__c/listViews/Prod_Fixed.listView-meta.xml
<ListView>
    <fullName>Prod_Fixed</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Priority__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Aureus_Internal_Approval__c</columns>
    <columns>Requested_By__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>TMC_Team_Member__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Operational Request,Enhancement,Defect</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Fixed</value>
    </filters>
    <filters>
        <field>Assigned_To__c</field>
        <operation>equals</operation>
        <value>Techmatrix</value>
    </filters>
    <label>Prod Fixed</label>
</ListView>