force-app/main/default/objects/Feedback__c/listViews/Verified_Issues.listView-meta.xml
<ListView>
    <fullName>Verified_Issues</fullName>
    <columns>NAME</columns>
    <columns>Priority__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Requested_By__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Verified</value>
    </filters>
    <label>Verified Issues</label>
</ListView>